sw/source/uibase/wrtsh/select.cxx
@@ -45,6 +45,7 @@
 #include <strings.hrc>
 
 #include <svx/svdview.hxx>
+#include <comphelper/scopeguard.hxx>
 
 namespace com::sun::star::util {
     struct SearchOptions2;
@@ -565,6 +566,9 @@ void SwWrtShell::ExtSelLn(const Point *pPt, bool )
 
 void SwWrtShell::EnterStdMode()
 {
+    m_bEnteringStdMode = true;
+    comphelper::ScopeGuard g([this] { m_bEnteringStdMode = false; });
+
     if(m_bAddMode)
         LeaveAddMode();
     if(m_bBlockMode)
